@@ -1,0 +1,29 @@
+<?php
+/**
+ * Class WC_Payments_Test
+ *
+ * @package WooCommerce\Payments\Tests
+ */
+
+/**
+ * WC_Payments unit tests.
+ */
+class WC_Payments_Test extends WP_UnitTestCase {
+
+	public function test_it_runs_upgrade_routines_during_init_at_priority_10() {
+		$install_actions_priority = has_action(
+			'init',
+			[ WC_Payments::class, 'install_actions' ]
+		);
+
+		$this->assertEquals( 10, $install_actions_priority );
+	}
+
+	public function test_it_calls_upgrade_hook_during_upgrade() {
+		update_option( 'woocommerce_woocommerce_payments_version', '1.0.0' );
+
+		$upgrade_run_count = did_action( 'woocommerce_woocommerce_payments_updated' );
+		WC_Payments::install_actions();
+		$this->assertEquals( $upgrade_run_count + 1, did_action( 'woocommerce_woocommerce_payments_updated' ) );
+	}
+}
